--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,14 @@
 
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <include src="partials/header-hero.html"></include>
+    <include src="./partials/header-hero.html"></include>
+    <include src="./partials/products.html"></include>
+    <include src="./partials/made.html"></include>
+    <include src="./partials/owners.html"></include>
+    <include src="./partials/comments.html"></include>
+    <include src="./partials/footer.html"></include>
+    <include src="./partials/burger.html"></include>
+    <script src="./js/burger.js"></script>
+    <script src="./js/slider.js"></script>
   </body>
 </html>
